@@ -16,7 +16,7 @@ function forw(r::S2C, x::Vector; yout=nothing, ygold=nothing, a...)
     forw(r.net2, r.net1.out[n1]; yout=yout, a...)
     n2 = nops(r.net2)
     ygold == nothing && return 0.0
-    loss(r.net2.op[n2], ygold; y=convert(typeof(ygold), r.net2.out[n2]))
+    loss(r.net2.op[n2], ygold; y=r.net2.out[n2])
     # TODO: implement lastout or direct write from net1 out to net2 input
     # You can do the latter if net2 is initialized first or just overwrite its buf0
     # and check for === before copy
