@@ -1,5 +1,7 @@
 2015-09-18  Deniz Yuret  <dyuret@ku.edu.tr>
 
+	* src/op/loss.jl: TODO: accept sparse target.
+
 	* src/param.jl: TODO: rename to Param.
 
 2015-08-17  Deniz Yuret  <dyuret@ku.edu.tr>
